--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ script:
     - cd ..
     - python setup.py install
     - cd frontend
+    - npm run coverage
     - npm run coveralls
 after_success:
     - if [ "$TRAVIS_OS_NAME" == "linux" -a "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" == "false" ]; then conda install conda-build && conda install anaconda-client && bash ci-support/conda_upload.sh ; fi
