--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,9 @@ script:
     - cd frontend
     - npm install
     - cd ..
-    - python setup.py install 
-    #- pip install dropbox
-    #- python run_tests.py --dropbox -v2
+    - python setup.py install
+    - cd frontend
+    - npm run coverage
+    - npm run coveralls
 after_success:
     - if [ "$TRAVIS_OS_NAME" == "linux" -a "$TRAVIS_BRANCH" == "master" -a "$TRAVIS_PULL_REQUEST" == "false" ]; then conda install conda-build && conda install anaconda-client && bash ci-support/conda_upload.sh ; fi
