--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "pubsub-js": "^1.5.8",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.10",
-    "react-bootstrap-dialog": "^0.9.1",
+    "react-bootstrap-dialog": "0.9.2",
     "react-color": "^2.13.8",
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
