--- a/frontend/package.json
+++ b/frontend/package.json
@@ -82,7 +82,7 @@
   },
   "scripts": {
     "build": "webpack --colors --progress",
-    "release": "webpack -p --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
+    "release": "webpack --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
     "coverage": "cross-env NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --require ignore-styles --require jsdom-global/register --compilers jsx:babel-register --recursive",
