--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^6.2.1",
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-istanbul": "^4.1.5",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.3.13",
@@ -82,7 +83,7 @@
   },
   "scripts": {
     "build": "webpack --colors --progress",
-    "release": "webpack --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
+    "release": "webpack -p --output-path=../backend/vcdat/resources && cp src/index.html ../backend/vcdat/resources",
     "coverage": "cross-env NODE_ENV=test nyc --extension .jsx --reporter=lcov --reporter=text npm test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test": "mocha test/mocha --grep '/.*Test.js[x]{0,1}/' --require ignore-styles --require jsdom-global/register --compilers jsx:babel-register --recursive",
