--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "css-element-queries": "^0.3.2",
     "jquery": "^3.1.0",
     "lodash": "^4.17.4",
+    "minimatch": "^3.0.4",
     "moment": "^2.18.1",
     "pubsub-js": "^1.5.8",
     "react": "^15.1.0",
