Starting colormap editor refactor. Lifts state from widget to editor

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -18,7 +18,14 @@
     ],
     "rules": {
             "max-len": ["error", 150, 4],
-            "spaced-comment": ["error", "always"]
+            "spaced-comment": ["error", "always"],
+            "no-console": ["error", { 
+                "allow": ["warn", "error"]
+            }]
+    },
+    "globals": {
+        "vcs": true
     },
     "root": true
+
 }
