--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     - bash miniconda.sh -b -p $HOME/miniconda
     - conda config --set always_yes yes --set changeps1 no
 script:
-    - conda install -c uvcdat/label/nightly -c conda-forge -c uvcdat nose vcs mesalib nodejs vcs-js
+    - conda install -c cdat/label/nightly -c conda-forge -c cdat nose vcs mesalib nodejs vcs-js
     - export UVCDAT_ANONYMOUS_LOG=False
     - echo $TRAVIS_BRANCH
     - export TRAVIS_PR_BRANCH=$TRAVIS_BRANCH
