--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.1.0",
+    "react-joyride": "^1.11.4",
     "react-redux": "^4.4.5",
     "react-toastify": "^3.3.1",
     "redux": "=3.5.2",
