--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "bootstrap-slider": "github:matthewma7/bootstrap-slider",
     "core-js": "^2.5.1",
     "css-element-queries": "^0.3.2",
+    "file-saver": "^1.3.8",
     "jquery": "^3.1.0",
     "lodash": "^4.17.4",
     "minimatch": "^3.0.4",
