--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.4",
     "minimatch": "^3.0.4",
     "moment": "^2.18.1",
+    "prop-types": "^15.6.1",
     "pubsub-js": "^1.5.8",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.10",
