--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap-slider": "github:matthewma7/bootstrap-slider",
+    "bootstrap-slider": "git://github.com/matthewma7/bootstrap-slider",
     "core-js": "^2.5.1",
     "css-element-queries": "^0.3.2",
+    "enzyme-adapter-react-16": "^1.1.1",
     "file-saver": "^1.3.8",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
