--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -7,6 +7,7 @@
     },
     "extends": ["eslint:recommended", "plugin:react/recommended", "plugin:import/errors", "plugin:import/warnings"],
     "parserOptions": {
+        "ecmaVersion": 2017,
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
             "jsx": true
