--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
     - bash miniconda.sh -b -p $HOME/miniconda
     - conda config --set always_yes yes --set changeps1 no
 script:
-    - conda install -c cdat/label/nightly -c conda-forge -c cdat nose vcs mesalib nodejs vcs-js
+    - conda install -c cdat/label/nightly -c conda-forge -c cdat nose vcs mesalib nodejs vcs-js flask
     - export UVCDAT_ANONYMOUS_LOG=False
     - echo $TRAVIS_BRANCH
     - export TRAVIS_PR_BRANCH=$TRAVIS_BRANCH
@@ -19,6 +19,8 @@ script:
     - npm install
     - cd ..
     - python setup.py install
+    - pip install -e .[test]
+    - py.test --cov vcdat
     - cd frontend
     - npm run coverage
     - npm run coveralls
