--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,9 @@
 version: 2.0
 
+checkout:
+  post:
+    - ./ci-support/checkout_merge_commit.sh
+
 jobs:
   build:
     macos:
@@ -9,11 +13,7 @@ jobs:
       - run:
           name: Pre install script for mac OS
           command: |
-            bash ~/project/vcdat/ci-support/circleci_mac_machine_pre.sh
-      - run:
-          name: Checkout merge commit
-          command: |
-            ./ci-support/checkout_merge_commit.sh
+            bash vcdat/ci-support/circleci_mac_machine_pre.sh
       - run:
           name: Install dependencies
           command: |
