--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -4,7 +4,7 @@ package:
 
 source:
   git_rev: @UVCDAT_BRANCH@
-  git_url: git://github.com/UV-CDAT/vcdat.git
+  git_url: git://github.com/CDAT/vcdat.git
 
 requirements:
   build:
@@ -12,16 +12,19 @@ requirements:
   - setuptools
   - nodejs
   run:
-  - python =2
+  - python=2
+  - nodejs
   - flask
   - vcs
   - cdms2
-  - vcs-js
+  - cdutil
   - genutil
-  - proj4 <5
+  - service_identity
+  - vcsaddons
+  - vcs-js
 
 build:
   noarch_python: true
 
 about:
-  home: http://github.com/UV-CDAT/vcdat
+  home: http://github.com/CDAT/vcdat
