--- a/conda/meta.yaml.in
+++ b/conda/meta.yaml.in
@@ -4,7 +4,7 @@ package:
 
 source:
   git_rev: @UVCDAT_BRANCH@
-  git_url: git://github.com/UV-CDAT/vcdat.git
+  git_url: git://github.com/CDAT/vcdat.git
 
 requirements:
   build:
@@ -24,4 +24,4 @@ build:
   noarch_python: true
 
 about:
-  home: http://github.com/UV-CDAT/vcdat
+  home: http://github.com/CDAT/vcdat
